# quadboy

./: .gitignore  CLAUDE.md  Cargo.toml  QuadBoy_Combat_Systems.md  bash.exe.stackdump  build-web.sh  clippy.toml  index.html  mq_js_bundle.js  quadboy.js  quadboy.wasm  quadboy_bg.wasm  rustc-ice-2025-09-08T20_14_17-39168.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml
bevy_serializable_derive/: Cargo.toml
bevy_serializable_derive/src/: lib.rs
notes/: hybrid-prefab-system.md  lighting_system_plan.md  map-gen.md  resources.md  stackable-items-implementation.md  tasks.md  todo.txt  zone-generation.md
quadboy_macros/: Cargo.toml
quadboy_macros/src/: lib.rs
src/: cfg.rs  main.rs
src/assets/shaders/: crt-shader.glsl  glyph-shader.glsl
src/common/: color.rs  cp437.rs  direction.rs  math.rs  mod.rs  palette.rs  rand.rs  shapes.rs
src/common/algorithm/: astar.rs  bresenham.rs  ca_rules.rs  cellular_automata.rs  dijkstra.rs  mod.rs  shadowcast.rs
src/common/random/: loot_table.rs  mod.rs  perlin.rs  poisson_disc.rs  rand.rs
src/common/structure/: grid.rs  hash_grid.rs  mod.rs  priority_queue.rs
src/domain/: game_formulas.rs  mod.rs  player.rs  settings.rs
src/domain/actions/: attack_action.rs  consume_action.rs  (+16 more)
src/ecs/: time.rs
src/engine/: app.rs  audio.rs  clock.rs  entity_serializer.rs  exit.rs  game_state.rs  input.rs  mod.rs  mouse.rs  profiling.rs  save.rs  stable_id.rs  time.rs
src/rendering/: ambient_transition.rs  animated_glyph.rs  camera.rs  color_blend.rs  crt_material.rs  glyph.rs  glyph_batch.rs  glyph_material.rs  lighting_data.rs  mod.rs  pipeline.rs  position.rs  position_systems.rs  projection.rs  render_layer.rs  render_target.rs  renderer.rs  text.rs  text_wrap.rs  visibility.rs  visual_effects.rs  zone_outline.rs
src/states/: game_state.rs  main_menu.rs  mod.rs  playing_state.rs  state.rs  state_attributes.rs  state_container.rs  state_debug_spawn.rs  state_explore.rs  state_game_over.rs  state_inventory.rs  state_load_game.rs  state_main_menu.rs  state_new_game.rs  state_overworld.rs  state_pause.rs  state_play.rs  state_settings.rs  state_shoot.rs  state_throw.rs
src/ui/: action_dropdown.rs  activatable.rs  ai_debug_dialog.rs  ai_debug_dialog_command.rs  ai_debug_indicators.rs  bar.rs  button.rs  callback.rs  debug.rs  dialog.rs  event_log.rs  examine_dialog.rs  examine_dialog_command.rs  focus.rs  fullscreen_background.rs  interaction.rs  item_actions.rs  item_dialog.rs  layout.rs  list.rs  mod.rs  xp_progress_bar.rs
(+186 files in other folders)
