[package]
name = "quadboy"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_ecs = "0.16.1"
macroquad = "0.4.13"
macroquad-profiler = "0.2.0"
# rand = { version = "0.9.2", features = ["small_rng"] }
# getrandom = { version = "0.3", features = ["wasm_js"] }
# ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
bevy_serializable_derive = { version = "=0.1.0", path = "./bevy_serializable_derive" }
serde_json = "1.0.142"
web-sys = { version = "0.3.77", features = ["Window", "Storage"] }

[patch.crates-io]
macroquad = { git = "https://github.com/not-fl3/macroquad" }
