[package]
name = "quadboy"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracy = ["tracy-client"]

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_ecs = "0.16.1"
macroquad = "0.4.13"
macroquad-profiler = "0.2.0"
rand = { version = "0.9.2", features = ["small_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0.219", features = ["derive"] }
bevy_serializable_derive = { version = "=0.1.0", path = "./bevy_serializable_derive" }
serde_json = "1.0.142"
web-sys = { version = "0.3.78", features = ["Window", "Storage"] }
wasm-bindgen = "0.2.101"
ordered-float = "5.0.0"
fastnoise-lite = "1.1.1"
quad-snd = "0.2"
tracy-client = { version = "0.17", optional = true, default-features = false, features = ["enable"] }

[patch.crates-io]
macroquad = { git = "https://github.com/not-fl3/macroquad" }
